<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_set_ring_tone_dialog_option"
        android:textSize="@dimen/muoi_lam_sp"
        android:padding="@dimen/muoi_dp"
        android:text="@string/set_ring_tone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_set_alarm_dialog_option"
        android:textSize="@dimen/muoi_lam_sp"
        android:padding="@dimen/muoi_dp"
        android:text="@string/set_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_set_sms_dialog_option"
        android:textSize="@dimen/muoi_lam_sp"
        android:padding="@dimen/muoi_dp"
        android:text="@string/set_up_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>